# proyecto_integrador

./: .gitignore  README.md  gitignore.txt
IntegradorInicial/: .env  COMO COMPILAR.txt  Como unirlo al juego.txt  archivo_configuracion.c  archivo_configuracion.h  conjuego  conjuego.c  juegomiyo  main.c  sinjuego  sinjuego.c
Preliminar_Juego_Completo/: README -  Changelog y Proyecto Modularizar.txt  README - Compilacion Miyo.txt  README - Proyecto Instalador  config.c  mainV1.c  mazo.h  record.c  record.h  scoreboard.c  scoreboard.h  scoreboard_test.c  z-mainV4.c  z-mainV5.c
Pruebas/: .env  README -  Changelog y Proyecto Modularizar.txt  README - Compilacion Miyo.txt  cleanmain.c  config.h  gamelogic.c  gamelogic.h  graphics_storage.c  graphics_storage.h  main.c  nuevo.c  scoreboard.h  scoreboard_test.c  test_gamelogic.c
blackjack/: README.md  blackjackTerminalPortable.rar
blackjack/DOCUMENTACION/: Lizandro, Work log and to do list.txt  README-Changelog MIYO.txt  changelog- Manuel y Benja.txt
blackjack/Para Graficos/: 2 - Instalacion raylib.txt
blackjack/blackjack_grafico/: CMakeLists-Prueba.txt  CMakeLists.txt  Makefile  README-Compilacion Miyo.txt  README-Compilacion.txt  graphics_storage.c  main.c
blackjack/blackjack_grafico/include/: gamelogic.h  jugador.h  scoreboard.h
blackjack/blackjack_grafico/src/: record.c  scoreboard.c
blackjack/completo_terminal/: CMakeLists.txt  Guia_Miyo.md  README-GUIA IMPLEMENTACION MIYO.txt  Readme.MD  jugador.h
blackjack/completo_terminal/Tools/: CMakeLists.txt  README.txt  main.c
blackjack/completo_terminal/Tools/src/: scoreboard.c
crearScore-Historial/: README.txt
crearScore-Historial/src/: scoreboard.c
desarrollo/: Ayudamemoria_git.txt
desarrollo/IntegradorInicial/: .env  COMO COMPILAR.txt  Como unirlo al juego.txt  archivo_configuracion.h  conjuego.c  main.c  sinjuego.c
juego_Completo_M/: Guia_Miyo.docx  README -  Changelog y Proyecto Modularizar.txt  README-Changelog y Proyecto Modularizar.txt  README-GUIA IMPLEMENTACION FUNCIONES.txt  README-GUIA IMPLEMENTACION MIYO.txt  Temario semanas 11 a 15.txt  jugador.c  jugador.h  logica.h  main.c  mazo.h  reglas.txt  scoreboard.c
para_graficos/: 1 - Instalacion glfw.txt  2 - Instalacion raylib.txt
proyectoUnificadoV1/: .env  Changelog y Proyecto Modularizar.txt  README -  Changelog y Proyecto Modularizar.txt  README - Compilacion.txt  README-Bilbiotecas graficas.txt  README.txt  files.c  files.h  files2.c  files2.h  gamelogic.c  gamelogic.h  graphics_storage.c  graphics_storage.h  main.c  scoreboardV1.c  scoreboardV2.c  scoreboard_test.c  test_gamelogic.c
proyectoUnificadoV1 - copia/: .env  Changelog y Proyecto Modularizar.txt  README.txt  files2.c  gamelogic.c  gamelogic.h
proyectoUnificadoV2/: .env  Change Log v5.txt  Change log gamelogic.txt  README -  Changelog y Proyecto Modularizar.txt  README - Compilacion Miyo.txt  README - Compilacion.txt  README-Bilbiotecas graficas.txt  change log V9.txt  change log.txt  config.c  config.h  gamelogic.c  gamelogic.h  graphics_storage.c  graphics_storage.h  main.c  score.c  scoreboard.h  scoreboardV1.c  scoreboardV2.c  scoreboard_test.c  test.c  test_gamelogic.c
proyectoUnificadoV3/: Lizandro, Work log and to do list.txt  New new changelog gamelogic.txt  README-Changelog y Proyecto Modularizar.txt  README-Compilacion Miyo.txt  README-GUIA IMPLEMENTACION MIYO.txt  README.md  gamelogic changelog.txt  gamelogic.c  gamelogic.h  gamelogicMB.c  gamelogicMB.h  gamelogicManuBenja.c  graphics_storage.c  graphics_storage.h  jugador.c  jugador.h  main.c  record.c  scoreboard.c
singrafico/: .env  logica.c  logica.h  main.c  mazo.c  mazo.h
(+59 files in other folders)
